<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/screenHeader"
        layout="@layout/screen_header" />

    <LinearLayout
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/libraryColorPrimary"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/saveButton"
        android:layout_below="@+id/screenHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_filed_bg"
                android:padding="8dp">

                <EditText
                    android:id="@+id/nameEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/field_bg"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColorHint="@color/light_gray_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corner_filed_bg"
                android:padding="8dp">

                <EditText
                    android:id="@+id/emailEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/field_bg"
                    android:hint="@string/email"
                    android:textColorHint="@color/light_gray_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corner_filed_bg"
                android:padding="8dp">

                <EditText
                    android:id="@+id/mobileEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/field_bg"
                    android:digits="0123456789"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:textColorHint="@color/light_gray_text" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
