<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/screenHeader"
        layout="@layout/screen_header" />

    <LinearLayout
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@color/libraryColorPrimary">

        <TextView
            android:id="@+id/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/updateButton"
        android:layout_below="@+id/screenHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_status"
                android:textColor="@color/dark_gray_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/field_bg"
                android:padding="12dp">

                <Spinner
                    android:id="@+id/statusSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_gray_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/field_bg"
                android:padding="8dp">

                <EditText
                    android:id="@+id/messageEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/field_bg"
                    android:hint="@string/type_message_here"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textColorHint="@color/light_gray_text" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
