<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<include-->
    <!--android:id="@+id/screenHeader"-->
    <!--layout="@layout/screen_header" />-->

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomNavigationLayout">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottomNavigationLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/complaintsTab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/dashboard_bg"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/complaintsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complaints"
                android:textColor="@color/dashboard_txt"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="wrap_content"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/suggestionsTab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/dashboard_bg"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/suggestionsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestions"
                android:textColor="@color/dashboard_txt"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="wrap_content"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/feedbackTab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/dashboard_bg"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/feedbackLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textColor="@color/dashboard_txt"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
