<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/screenHeader"
        layout="@layout/screen_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/actionButton"
        android:layout_below="@id/screenHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/feedImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:background="@color/field_bg" />

                <TextView
                    android:id="@+id/addImageLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/add_image"
                    android:textColor="@color/light_gray_text"
                    android:textSize="16sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corner_filed_bg"
                android:padding="8dp">

                <EditText
                    android:id="@+id/genericTitleEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/field_bg"
                    android:hint="@string/title"
                    android:inputType="textMultiLine|textCapWords"
                    android:maxLength="60"
                    android:textColorHint="@color/light_gray_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_corner_filed_bg"
                android:padding="8dp">

                <EditText
                    android:id="@+id/genericDescriptionEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/field_bg"
                    android:hint="@string/description"
                    android:inputType="textMultiLine|textCapSentences"
                    android:textColorHint="@color/light_gray_text" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/actionButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/libraryColorPrimary">

        <TextView
            android:id="@+id/actionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>
